# ChangeLog for media-libs/gegl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> +gegl-0.0.18.ebuild:
  Version bump.

  14 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> -gegl-0.0.14.ebuild,
  gegl-0.0.16.ebuild, gegl-9999.ebuild:
  Fixed ebuilds (see bug #183425 for details).

*gegl-0.0.16 (02 Mar 2008)

  02 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +gegl-0.0.16.ebuild,
  -gegl-0.0.12.ebuild:
  Version bump.

*gegl-0.0.14 (30 Dec 2007)

  30 Dec 2007; Piotr Szymaniak <lazy_bum@o2.pl> +gegl-0.0.14.ebuild:
  Version bump, added few econf options.

  23 Dec 2007; Piotr Szymaniak <lazy_bum@o2.pl> gegl-0.0.12.ebuild:
  Cleaned up.

*gegl-0.0.12 (23 Dec 2007)

  23 Dec 2007; Piotr Szymaniak <lazy_bum@o2.pl> +gegl-0.0.12.ebuild:
  Added again.