@@ -1,6 +1,6 @@
 DIST gegl-0.0.16.tar.bz2 845855 RMD160 966f35e9ad94bb82ec1b4ed8e0ac644c32950030 SHA1 de262a29fc3c6c5fc1a436828044cf22756fb54b SHA256 120fc5b5573bd6e721cc7c5b443c1c556f69f432cac44f029ba917b4efc3eb49
 DIST gegl-0.0.18.tar.bz2 1204867 RMD160 baff271141c0a569c98537b3d727b1a3564cdebb SHA1 f8113ad33161337eb107ad84c0ac968dca1d02d2 SHA256 58d5c2c415684f5744dd8dec80a1c230fc4b02ecea6c9edf3b5ef3ed4046ef93
 EBUILD gegl-0.0.16.ebuild 1595 RMD160 64b16285ab67967bae516317269cdead2770c9d7 SHA1 8eb916c9e1db5a8263aa4cec8a63b18d2e80e483 SHA256 2f489a2a237a9cf9bcbc78f7a1e452b0a3f3387ce0e1663065b822199aef6424
-EBUILD gegl-0.0.18.ebuild 1681 RMD160 043100689f3ddf5c32ec76e1d604ef9c427db6a9 SHA1 522be5697ecc41a70480134664ea284937aa39c3 SHA256 34dcf5c9420aebe2d1fb1374ea03e78b913e5aa804d60e64fd0df3d6e2ec2f7f
+EBUILD gegl-0.0.18.ebuild 2522 RMD160 5c0595edc9b79dfb419d48279ddffcc6980c3057 SHA1 77479ae4139ce56dc219ca85a820fa9f29221012 SHA256 5e807a6c75bdb5ea89af1984fd38414ac04b688abc34239f555174a7650bda1c
 EBUILD gegl-9999.ebuild 1633 RMD160 c22e98b7f67923fff18340a89ca11931793afba8 SHA1 c8182eaeac7ca57ebd0d7dc26b921fc249011f05 SHA256 6bbc00dbd49e9b35b828d7891e893ae08ff86410eb199b5acf4a54eacaab56e3
-MISC ChangeLog 830 RMD160 ce3e7c1730ca40b27ebf1713635e5a91418cca8a SHA1 d365e67f65d272c8ab0db038bb512af4fa89f305 SHA256 c8c2e3032aef2241bd6e6f6f6ed8ae9678ea7b25cb2c44ff8ec08f3b1b811a66
+MISC ChangeLog 931 RMD160 043d7213dcd7916219293f5f9a2c7d911a300ee4 SHA1 4bf7a4e02298dea4d9a6ba4f4bf77e5f9154a03a SHA256 fdbc14052576d63d5573b3fc2ba437b9dde29dfc291dc506fda83f5fcf1113c8
