@@ -12,25 +12,52 @@ LICENSE="|| ( GPL-3 LGPL-3 )"
 SLOT="0"
 KEYWORDS="~x86 ~amd64"
 
-IUSE="jpeg graphviz openexr ruby sdl svg debug doc threads gtk cairo pango enscript asciidoc ffmpeg workshop mmx sse"
+IUSE="jpeg graphviz openexr ruby sdl svg debug doc threads gtk cairo pango \
+	enscript asciidoc ffmpeg workshop mmx sse"
+#
+# gegl may now (since 0.0.22) use sse or mmx for accelerated calculations
+#
+
+# The workshop directory (and thus the `workshop' use flag) is where
+# experimental stuff is built into.  You shouldn't need it unless you're
+# developing on gegl yourself.  Maybe therefore it should only exist in
+# the svn ebuild?
 
 RDEPEND=""
 DEPEND="${RDEPEND}
-	>=media-libs/babl-0.0.22
 	>=dev-libs/glib-2.12.0
+	>=media-libs/babl-0.0.22
+	media-libs/libpng
 	gtk? ( >=x11-libs/gtk+-2.8.6 )
 	cairo? ( x11-libs/cairo )
 	pango? ( x11-libs/pango )
-	media-libs/libpng
 	jpeg? ( media-libs/jpeg )
-	ruby? ( dev-lang/ruby )
 	sdl? ( media-libs/libsdl )
 	openexr? ( media-libs/openexr )
 	svg? ( >=gnome-base/librsvg-2.14.0 )
+	ffmpeg? ( media-video/ffmpeg )
+        workshop? ( >=dev-lang/lua-5.1.0 ) 
 	graphviz? ( media-gfx/graphviz )
 	enscript? ( app-text/enscript )
 	asciidoc? ( app-text/asciidoc )
-	ffmpeg? ( media-video/ffmpeg )"
+        "
+
+#
+# Meaning of the optional dependencies (from http://www.gegl.org): 
+#       SDL (display op)
+#       libjpeg (jpg loader op)
+#       libopenexr (exr loader op)
+#       cairo, pango (text source op)
+#       avcodec, avformat (ff-load and experimental ff-save)
+#       librsvg (svg loader)
+#       asciidoc, enscript (documentation)
+#       graphviz (graphviz graph description from command line)
+#       
+#
+# Unnecessary dependencies:
+#	ruby? ( dev-lang/ruby ) ## -> only if building from svn
+#	
+
 
 src_compile() {
 	local MYCONF="$(use_enable debug) $(use_enable doc docs) \
